--- a/style.css
+++ b/style.css
@@ -649,6 +649,7 @@ h5 i{
 
 @media only screen and (max-width: 400px){
   .main-lis{
-   font-size: .6rem;
+   font-size: .3rem;
+   padding: 0;
  }
 }
