--- a/style.css
+++ b/style.css
@@ -63,10 +63,11 @@ ul{
   border: #93adc1;
   background: url(img/magnify.png) no-repeat scroll 5px 15px;
   background-size: 15px;
+  padding-left: 25px;
 }
 
-.search-bar input{
-  padding-left: 3px;
+.search-bar input i{
+  padding-left: 30px;
 }
 
 .search-btns:hover {
@@ -77,7 +78,7 @@ ul{
 }
 
 .search-bar-literal::placeholder {
-  padding-left: 30px;
+  padding-left: 3px;
 }
 
 .top-nav {
