--- a/style.css
+++ b/style.css
@@ -693,20 +693,29 @@ h5 i{
     min-width: 10rem;
   }
 
+  .top-nav {
+    grid-template-columns: 4rem 1fr 4rem 4rem 3rem;
+  }
+
   .circle-graphs {
     align-content: center;
     flex-direction: column;
     display: flex;
     max-width: 10rem;
+    margin: 0;
   }
 
   hr {
     font-size: 1rem;
     width: 70%;
   }
+  .navigation{
+    padding-left: 0;
+    padding-right: 0;
+  }
 
   .position-container{
-    padding: .5rem;
+    padding: 0;
   }
 
   .svg-box {
